--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header">
             
             <div class="below-top">
-            <img src="/images/Screenshot 2024-03-03 020455.png" class="boat" href="index.html">
+            <img src="images/Screenshot 2024-03-03 020455.png" class="boat" href="index.html">
             </div>    
             <div class="header-items hover-div .mulish-font">
                 Categories   
@@ -31,15 +31,15 @@
         </div>
             <div class="carousel-container">
                 <div class="carousel-inner">
-                  <div class="carousel-item"><img src="/images/image1.png" alt="Image 1"></div>
-                  <div class="carousel-item"><img src="/images/image2.png" alt="Image 2"></div>
-                  <div class="carousel-item"><img src="/images/image3.png" alt="Image 3"></div>
-                  <div class="carousel-item"><img src="/images/image4.png" alt="Image 3"></div>
+                  <div class="carousel-item"><img src="images/image1.png" alt="Image 1"></div>
+                  <div class="carousel-item"><img src="images/image2.png" alt="Image 2"></div>
+                  <div class="carousel-item"><img src="images/image3.png" alt="Image 3"></div>
+                  <div class="carousel-item"><img src="images/image4.png" alt="Image 3"></div>
                 </div>
                 <button class="carousel-button left" onclick="scrollCarousel(-1)">❮</button>
                 <button class="carousel-button right" onclick="scrollCarousel(1)">❯</button>
             </div>
-                <div class="bestsellers" style="margin-left: 30px;;">
+                <div class="bestsellers" style="margin-left: 30px;">
               Explore <b>&nbsp;Bestselle<u style="text-decoration-color: red;">rs</u></b>  
             </div>
             <div class="bestsellers-images scrollable-div" id="scrollableDiv">
