--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         </div>
             <div class="carousel-container">
                 <div class="carousel-inner">
-                  <div class="carousel-item"><img src="images/image1.png" alt="Image 1"></div>
-                  <div class="carousel-item"><img src="images/image2.png" alt="Image 2"></div>
-                  <div class="carousel-item"><img src="images/image3.png" alt="Image 3"></div>
-                  <div class="carousel-item"><img src="images/image4.png" alt="Image 3"></div>
+                  <div class="carousel-item"><img src="images/image1.png"></div>
+                  <div class="carousel-item"><img src="images/image2.png"></div>
+                  <div class="carousel-item"><img src="images/image3.png"></div>
+                  <div class="carousel-item"><img src="images/image4.png"></div>
                 </div>
                 <button class="carousel-button left" onclick="scrollCarousel(-1)">❮</button>
                 <button class="carousel-button right" onclick="scrollCarousel(1)">❯</button>
